--- a/package.json
+++ b/package.json
@@ -23,5 +23,13 @@
     "cross-env": "^7.0.3",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.20"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/brunsantiago/api-datamanager-test.git"
+  },
+  "bugs": {
+    "url": "https://github.com/brunsantiago/api-datamanager-test/issues"
+  },
+  "homepage": "https://github.com/brunsantiago/api-datamanager-test#readme"
 }
